--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "date-fns": "^2.28.0",
+    "decompress": "^4.2.1",
     "formidable": "^2.0.1",
     "near-api-js": "^2.1.4",
     "next": "12.1.6",
