--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "colors": "^1.4.0",
     "date-fns": "^2.28.0",
     "decompress": "^4.2.1",
-    "diff": "^5.1.0",
     "formidable": "^2.0.1",
+    "fs-extra": "^11.1.1",
     "near-api-js": "^2.1.4",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "swr": "^2.2.0"
+    "swr": "^2.2.0",
+    "toml": "^3.0.0"
   },
   "devDependencies": {
     "@types/formidable": "^2.0.5",
